--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.9.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
